# currency-sqlalchemy-api

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  all_currency_data.csv  docker-compose.yml  eur_pln_usd_pln_currency_data.csv  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: .gitkeep  24008ad90389_.py  9825036cb991_.py  b2247d44daa5_.py
app/: __init__.py  db.py  main.py
app/core/: celery_utils.py  middlewares.py  models.py
app/currency/: api.py  constants.py  models.py  services.py  statistics.py  tasks.py  utils.py  worker.py
files/: all_currency_data.csv  eur_pln_usd_pln_chf_pln_currency_data.csv  eur_pln_usd_pln_currency_data.csv
settings/: base.py  gunicorn.conf.py
tests/: conftest.py  test_api.py  test_utils.py
