[tool.poetry]
name = "currency-sqlalchemy-api"
version = "0.1.2"
description = "API for currency exchange rates"
authors = ["hkorzeniewski"]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
fastapi = "^0.100.1"
gunicorn = "^21.2.0"
uvicorn = "^0.23.1"
alembic = "^1.11.1"
sqlmodel = "^0.0.8"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
stripe = "^6.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.31.0"}
greenlet = "^3.0.0"
celery = "^5.3.6"
redis = "^5.0.1"
pugsql = "^0.2.4"
fastapi-utils = "^0.2.1"
psycopg2 = "^2.9.9"
trio = "^0.23.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
pre-commit = "^3.3.2"
black = "^23.3.0"
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"


[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
ignore = ["E712"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*migrations*",
]

[tool.ruff.isort]
section-order = ["fastapi", "future", "standard-library", "third-party",  "first-party", "local-folder"]

[tool.ruff.isort.sections]
fastapi = ["fastapi"]

[tool.poetry_bumpversion.file."apps/__init__.py"]

[tool.pytest.ini_options]
pythonpath = ["."]